# Turing-Academy-Backend

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.sh
databases/core/: admin.sqlite3
turing_back/: asgi.py  config.py  urls.py  wsgi.py
turing_back/apps/api/: urls.py
turing_back/apps/api/v1/: urls.py
turing_back/apps/api/v1/community/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/community/migrations/: 0001_initial.py  0002_alter_chosenby_options_alter_we_options_and_more.py  0003_alter_community_options.py
turing_back/apps/api/v1/event/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/event/migrations/: 0001_initial.py  0002_event_is_paid_event_price.py  0003_gallery.py
turing_back/apps/api/v1/general/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/general/migrations/: 0001_initial.py
turing_back/apps/api/v1/graduate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/partner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/schoolarship/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/speciality/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
turing_back/apps/api/v1/test_and_contact/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
turing_back/settings/: base.py  dev.py  prod.py
turing_back/static/admin/css/: style.css
(+11 files in other folders)
